edition = "2023";

package testkube.sync.v1;

import "testkube/sync/v1/test_trigger.proto";
import "testkube/sync/v1/test_workflow.proto";
import "testkube/sync/v1/test_workflow_template.proto";
import "testkube/sync/v1/webhook.proto";
import "testkube/sync/v1/webhook_template.proto";

// UpdateOrCreateRequest is the message sent by a client when
// requesting the update or creation of a Testkube object.
message UpdateOrCreateRequest {
  // Payload is the protobuf representation of the object that
  // has been modified in the Agent's observable scope.
  // The Payload that is used determines which type of object
  // is identified as modified.
  oneof payload {
    // test_trigger indicates the object is a TestTrigger
    TestTrigger test_trigger = 1;
    // test_workflow indicates the object is a TestWorkflow
    TestWorkflow test_workflow = 2;
    // test_workflow_template indicates the object is a TestWorkflowTemplate
    TestWorkflowTemplate test_workflow_template = 3;
    // webhook indicates the object is a Webhook
    Webhook webhook = 4;
    // webhook_template indicates the object is a WebhookTemplate
    WebhookTemplate webhook_template = 5;
  }
}
